--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://canvashome.com, http://127.0.0.1:5500"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
